--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "devDependencies": {},
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "babel src -d build"
+        "build": "babel src -d build --out-dir lib"
     },
     "repository": {
         "type": "git",
